<resources>
    <string name="app_name">GAME SUIT</string>
    <string name="title_1">Kertas</string>
    <string name="title_2">Gunting</string>
    <string name="title_3">Batu</string>
    <string name="title_player">Pemain</string>
    <string name="title_computer">Computer</string>
    <string name="title_author">By Helmi</string>
    <string name="title_vs">VS</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="skip_intro">SKIP INTRO</string>
    <string name="next">NEXT</string>
    <string name="description_text">Description Text</string>
    <string name="title_text">Title Text</string>
    <string name="dialog_start_game" />
    <string name="start" />
    <string name="cancel" />
    <string name="signin" />
    <string name="pilih_lawanmu">PILIH LAWANMU</string>
    <string name="next2">NEXT</string>
    <string name="nickname">Nickname</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
</resources>