<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:padding="15dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/imageSlideIcon"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:contentDescription="@string/app_name" />

    <TextView
        android:id="@+id/text_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:gravity="center"
        android:text="@string/description_text"
        android:fontFamily="@font/comic_sans_ms_bold"
        android:textColor="@color/design_default_color_on_secondary"
        android:textSize="30sp" />

    <EditText
        android:id="@+id/editText"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:hint="@string/nickname"
        android:padding="8dp"
        android:autofillHints="name"
        android:inputType="textPersonName"
        android:drawableStart="@drawable/ic_person"
        android:drawablePadding="16dp"
        android:layout_gravity="center"
        android:visibility="visible"
        />

    <RadioGroup
        android:id="@+id/gender_options"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:checkedButton="@id/option_male"
        android:layout_gravity="center"
        android:visibility="visible"
        >

        <RadioButton
            android:id="@+id/option_male"
            style="@style/Widget.TipTime.CompoundButton.RadioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/male" />

        <RadioButton
            android:id="@+id/option_female"
            style="@style/Widget.TipTime.CompoundButton.RadioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/female" />

    </RadioGroup>

</LinearLayout>